Fix z-index

--- a/skin/algoliasearch.css
+++ b/skin/algoliasearch.css
@@ -11,7 +11,7 @@
     top: 30px;
     width: 100%;
     min-width: 330px;
-    z-index: 1000;
+    z-index: 1000 !important;
     border-bottom: 1px solid #dddddd;
 }
 
